3_3_kuber-homeworks_network_in_k8s/code/cache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
