3_3_kuber-homeworks_network_in_k8s/code/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 1180
