3_3_kuber-homeworks_network_in_k8s/code/cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 1180
