3_3_kuber-homeworks_network_in_k8s/code/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 1180
